# mlde

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  environment.lock.yml  environment.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  lint.yml
src/ml_downscaling_emulator/: cordex_ml_data.py  data.py  postprocess.py  run_lib.py  sampling.py  torch.py  training.py  utils.py
src/ml_downscaling_emulator/configs/: default_ukcp_local_pr_12em_configs.py  default_ukcp_local_pr_1em_configs.py
src/ml_downscaling_emulator/configs/deterministic/: cordex_ml_defaults.py  cordex_ml_mv_esd_alps_unet.py  cordex_ml_mv_esd_nz_unet.py  cordex_ml_mv_esd_sa_unet.py  cordex_ml_mv_hist_fut_alps_unet.py  cordex_ml_mv_hist_fut_nz_unet.py  cordex_ml_mv_hist_fut_sa_unet.py  cordex_ml_mv_sa_unet.py  cordex_ml_pr_hist_fut_alps_unet.py  cordex_ml_pr_hist_fut_nz_unet.py  cordex_ml_pr_hist_fut_sa_unet.py  cordex_ml_pr_sa_unet.py  default_configs.py  ukcp_local_pr_12em_cncsnpp.py  ukcp_local_pr_12em_plain_unet.py  ukcp_local_pr_12em_tuned_plain_unet.py  ukcp_local_pr_1em_cncsnpp.py  ukcp_local_pr_debug.py  ukcp_local_pr_plain_unet_debug.py
src/ml_downscaling_emulator/configs/subvpsde/: cordex_ml_mv_cncsnpp_continuous_defaults.py  cordex_ml_mv_esd_sa_cncsnpp_continuous.py  cordex_ml_mv_hist_fut_alps_cncsnpp_continuous.py  cordex_ml_pr_hist_fut_alps_cncsnpp_continuous.py  cordex_ml_pr_hist_fut_alps_cncsnpp_continuous_xl.py  cordex_ml_pr_hist_fut_nz_cncsnpp_continuous.py  cordex_ml_pr_hist_fut_sa_cncsnpp_continuous.py  cordex_ml_pr_sa_cncsnpp_continuous_xs.py  ukcp_local_mv_12em_cncsnpp_continuous.py  ukcp_local_mv_debug.py  ukcp_local_pr_12em_cncsnpp_continuous.py  ukcp_local_pr_12em_cncsnpp_continuous_medium.py  ukcp_local_pr_12em_cncsnpp_continuous_small.py  ukcp_local_pr_12em_cncsnpp_continuous_xs.py  ukcp_local_pr_1em_cncsnpp_continuous.py  ukcp_local_pr_1em_cncsnpp_continuous_ld.py  ukcp_local_pr_debug.py  ukcp_local_rh_12em_cncsnpp_continuous.py  ukcp_local_tmean_12em_cncsnpp_continuous.py
src/ml_downscaling_emulator/configs/vesde/: ukcp_local_pr_cncsnpp_continuous.py  ukcp_local_pr_cunet_continuous.py
src/ml_downscaling_emulator/deterministic/: run_lib.py
src/ml_downscaling_emulator/deterministic/configs/: ukcp_local_12em_pr_unet.py  ukcp_local_pr_unet.py
src/ml_downscaling_emulator/models/: cncsnpp.py  cunet.py  det_cunet.py  location_params.py  utils.py
src/ml_downscaling_emulator/score_sde_pytorch/: losses.py  run_lib.py  sampling.py
src/ml_downscaling_emulator/score_sde_pytorch/configs/: default_ukcp_local_pr_12em_configs.py  default_ukcp_local_pr_1em_configs.py
src/ml_downscaling_emulator/score_sde_pytorch/configs/deterministic/: default_configs.py  ukcp_local_pr_12em_cncsnpp.py  ukcp_local_pr_12em_plain_unet.py  ukcp_local_pr_12em_tuned_plain_unet.py  ukcp_local_pr_1em_cncsnpp.py  ukcp_local_pr_debug.py  ukcp_local_pr_plain_unet_debug.py
src/ml_downscaling_emulator/score_sde_pytorch/configs/subvpsde/: ukcp_local_mv_12em_cncsnpp_continuous.py  ukcp_local_mv_debug.py  ukcp_local_pr_12em_cncsnpp_continuous.py  ukcp_local_pr_1em_cncsnpp_continuous.py  ukcp_local_pr_1em_cncsnpp_continuous_ld.py  ukcp_local_pr_1em_cunet_continuous.py  ukcp_local_pr_debug.py  ukcp_local_rh_12em_cncsnpp_continuous.py  ukcp_local_tmean_12em_cncsnpp_continuous.py
src/ml_downscaling_emulator/score_sde_pytorch/configs/vesde/: ukcp_local_pr_cncsnpp_continuous.py  ukcp_local_pr_cunet_continuous.py
src/ml_downscaling_emulator/score_sde_pytorch/models/: ema.py
src/ml_downscaling_emulator/score_sde_pytorch_hja22/: losses.py  run_lib.py
src/ml_downscaling_emulator/score_sde_pytorch_hja22/configs/: default_ukcp18_12em_configs.py  default_ukcp18_configs.py  default_ukcp_local_pr_12em_configs.py  default_ukcp_local_pr_1em_configs.py  default_xarray_configs.py
src/ml_downscaling_emulator/score_sde_pytorch_hja22/configs/determinisitic/: ukcp18_12em_cncsnpp.py
src/ml_downscaling_emulator/score_sde_pytorch_hja22/configs/subvpsde/: ukcp18_12em_cncsnpp_continuous.py  ukcp18_cncsnpp_continuous.py  ukcp18_cunet_continuous.py  ukcp_local_pr_12em_cncsnpp_continuous.py  ukcp_local_pr_1em_cncsnpp_continuous.py  ukcp_local_pr_1em_cncsnpp_continuous_ld.py  ukcp_local_pr_1em_cunet_continuous.py  ukcp_local_pr_cncsnpp_continuous.py  ukcp_local_pr_cunet_continuous.py
src/ml_downscaling_emulator/score_sde_pytorch_hja22/configs/vesde/: ukcp18_cncsnpp_continuous.py  ukcp18_cunet_continuous.py  ukcp_local_pr_cncsnpp_continuous.py  ukcp_local_pr_cunet_continuous.py
src/ml_downscaling_emulator/score_sde_pytorch_hja22/models/: cncsnpp.py  cunet.py  location_params.py
src/ml_downscaling_emulator/statistical_downscaling/: __init__.py
tests/: smoke-test  smoke-test-det  smoke-test-det-plain-unet
tests/deterministic/: smoke-test
tests/ml_downscaling_emulator/: test_data.py
tests/smoke-tests/: test-cordex-ml-cncsnpp  test-cordex-ml-det-unet  test-det-debug-cunet  test-det-det_cunet  test-subvpsde-cncsnpp  test-subvpsde-debug-cunet
