[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_downscaling_emulator"
version = "0.4.0a1"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for score-based generative models using SDEs for downscaling precipitation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  "flufl-lock==7.1.1",
  "mlde-utils==0.2.0",
  "mlflow",
  #"python-cmethods==1.0.1",
  "tqdm", "torchinfo>=1.8.0,<2",
]

[dependency-groups]
test = ["pytest"]
dev = [{include-group = "test"}]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde"
"Bug Tracker" = "https://github.com/henryaddison/mlde/issues"

[project.scripts]
    mlde = "ml_downscaling_emulator.bin:app"

[tool.black]
extend-exclude = '^/src/ml_downscaling_emulator/(run_lib.py|sde_lib.py|likelihood.py|sampling.py|losses.py|models|op|configs)'

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge", "nodefaults"]
name = "mlde"
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.8"

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
# Create a custom environment which only has the `lint` feature
lint = {features = ["lint"], no-default-feature = true}

[tool.pixi.tasks]

[tool.pixi.dependencies]
cartopy = { version = "==0.22.0" }
protobuf = { version = "3.20.*" }
absl-py = { version = "==1.3.0", build = "pyhd8ed1ab_0" }
bottleneck = { version = "~=1"}
codetiming = { version = "==1.4.0", build = "pyhd8ed1ab_0" }
cuda-version = "12.8.*"
cuda = { version = "==12.8" }
dask = { version = "==2022.12.1", build = "pyhd8ed1ab_0" }
filelock = { version = "==3.8.2", build = "pyhd8ed1ab_0" }
gxx = { version = "~=9" }
knockknock = { version = "==0.1.8.1", build = "py_0" }
ml-collections = { version = "==0.1.1", build = "pyhd8ed1ab_0" }
netcdf4 = { version = "*" }
ninja = { version = "==1.11.0", build = "h924138e_0" }
pint = { version = "==0.20.1", build = "pyhd8ed1ab_0" }
python = { version = "~=3.10" }
python-dotenv = { version = "==1.0.1", build = "pyhd8ed1ab_0" }
shortuuid = { version = "==1.0.11", build = "pyhd8ed1ab_0" }
tensorboard = { version = "==2.11.0", build = "pyhd8ed1ab_0" }
typer = { version = "*"}
wandb = { version = "*" }
xarray = { version = "==2022.12.0", build = "pyhd8ed1ab_0" }

[tool.pixi.pypi-dependencies]
ml-downscaling-emulator = { path = ".", editable = true }
torch = { version = "~=2.9", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = "~=0.24", index = "https://download.pytorch.org/whl/cu128" }

[tool.pixi.feature.lint.dependencies]
python = { version = "~=3.10" }
pre-commit = "*"
flake8 = { version = "==6.0.0" }
black = { version = "==22.10.0" }

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.feature.lint.tasks]
lint = "black . && flake8 ."
