[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_downscaling_emulator"
version = "0.4.0"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for score-based generative models using SDEs for downscaling precipitation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  "flufl-lock~=7.1.1",
  "mlde-utils==0.2.0",
  "mlflow~=3.6",
  "tqdm~=4.67",
  "torchinfo>=1.8.0,<2",
]

[dependency-groups]
test = ["pytest"]
dev = [{include-group = "test"}]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde"
"Bug Tracker" = "https://github.com/henryaddison/mlde/issues"

[project.scripts]
    mlde = "ml_downscaling_emulator.bin:app"

[tool.black]
extend-exclude = '^/src/ml_downscaling_emulator/(run_lib.py|sde_lib.py|likelihood.py|sampling.py|losses.py|models|op|configs)'

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge", "nodefaults"]
name = "mlde"
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.8"

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
# Create a custom environment which only has the `lint` feature
lint = {features = ["lint"], no-default-feature = true}

[tool.pixi.tasks]

[tool.pixi.dependencies]
absl-py = { version = "~=1.3.0" }
bottleneck = { version = "~=1.6.0"}
cartopy = { version = "~=0.25.0" }
cdo = { version = "~=2.5.0" }
cf-xarray = { version = "~=0.10.9" }
codetiming = { version = "~=1.4.0" }
cuda-version = "12.8.*"
cuda = { version = "==12.8" }
dask = { version = "==2025.11.0" }
filelock = { version = "~=3.8.2" }
gxx = { version = "~=14.3" }
ml-collections = { version = "~=1.0" }
netcdf4 = { version = "~=1.7" }
ninja = { version = "~=1.11.1" }
pint = { version = "~=0.25" }
protobuf = { version = "~=6.31.1" }
python = { version = "~=3.14.0" }
python-cdo = { version = "~=1.6" }
python-dotenv = { version = "~=1.0" }
shortuuid = { version = "~=1.0" }
tensorboard = { version = "~=2.20" }
typer = { version = "~=0.20"}
xarray = { version = "==2025.11.0" }

[tool.pixi.pypi-dependencies]
ml-downscaling-emulator = { path = ".", editable = true }
torch = { version = "~=2.9", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = "~=0.24", index = "https://download.pytorch.org/whl/cu128" }

[tool.pixi.feature.lint.dependencies]
python = { version = "3.12.*" }
pre-commit = "~=4.5"
flake8 = { version = "~=7.3" }
black = { version = "~=25.1.0" }

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.feature.lint.tasks]
lint = "black . && flake8 ."
